modified - login, searchpage

--- a/login.html
+++ b/login.html
@@ -11,8 +11,7 @@
   <!-- Website Branding -->
   <div class="website-branding">
     <img src="images/Logo.png" alt="Cafe St. Logo" class="website-logo">
-    <span class="cafe">Cafe</span>
-    <span class="st">St.</span>
+    <p class="web-name"><span class="cafe">Cafe</span> <span class="st">St.</span></p>
   </div>
   <!-- FORM SECTION -->
   <div class="row">
@@ -61,6 +60,9 @@
     </div>
     <!-- END SIGN UP -->
     <!-- SIGN IN -->
+    <a href="index.html" class="returnbttn">
+      <img src="images/return.png" class="returnbttnimg" alt="Return">
+  </a> 
     <div class="col align-items-center flex-col sign-in">
       <div class="form-wrapper align-items-center">
         <div class="form sign-in">
@@ -85,6 +87,7 @@
   </div>
   <!-- CONTENT SECTION -->
   <div class="row content-row">
+ 
     <!-- SIGN IN CONTENT -->
     <div class="col align-items-center flex-col">
       <div class="text sign-in">
