--- a/popup.html
+++ b/popup.html
@@ -25,7 +25,7 @@
     You have logged in successfully!
   </div>
   <div class="dismiss-btn">
-    <button onclick="location.href='homepage.html'">Dismiss</button>
+    <button onclick="location.href='index.html'">Dismiss</button>
   </div>
 </div>
 
